--- a/Public/modify-orders/index.html
+++ b/Public/modify-orders/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <div class="main-element" id="main-element"></div>
-    <!-- <li class="list"></li> -->
-    <script type="module" src="./index.js"></script>
+    <h2>shit worked</h2>
+    <div id="splash-zone"></div>
+    <script type="module" src="./orders.js"></script>
   </body>
 </html>
