change endpoint paths back.

--- a/Public/modify-orders/index.html
+++ b/Public/modify-orders/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>shit worked</h2>
+    <h2>Change Your Order?</h2>
     <div id="splash-zone"></div>
     <script type="module" src="./orders.js"></script>
   </body>
